demo/templates/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: { { include "app.svc.headless" . } }
  labels:
    { { - include "app.labels" . | nindent 4 } }
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: { { .Values.service.port } }
      targetPort: http
      protocol: TCP
      name: http
  selector:
    { { - include "app.selectorLabels" . | nindent 4 } }
