demo/templates/ingress.yaml
{ { - if .Values.ingress.enabled - } }
  { { - $fullName := include "app.fullname" . - } }
  { { - $svcPort := .Values.service.port - } }
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: { { $fullName } }
  labels:
    { { - include "app.labels" . | nindent 4 } }
  { { - with .Values.ingress.annotations } }
  annotations:
    { { - toYaml . | nindent 4 } }
  { { - end } }
spec:
  { { - if .Values.ingress.className } }
  ingressClassName: { { .Values.ingress.className } }
  { { - end } }
  { { - if .Values.ingress.tls } }
  tls:
    { { - range .Values.ingress.tls } }
    - hosts:
        { { - range .hosts } }
        - { { . | quote } }
        { { - end } }
      secretName: { { .secretName } }
    { { - end } }
  { { - end } }
  rules:
    { { - range .Values.ingress.hosts } }
    - host: { { .host | quote } }
      http:
        paths:
          { { - range .paths } }
          - path: { { .path } }
            { { - if .pathType } }
            pathType: { { .pathType } }
            { { - end } }
            backend:
              service:
                name: { { $fullName } }
                port:
                  number: { { $svcPort } }
          { { - end } }
    { { - end } }
  { { - end } }
